fixed flex alignment on hero

--- a/src/_css/theme/el-c-hero.pcss
+++ b/src/_css/theme/el-c-hero.pcss
@@ -60,3 +60,7 @@
     margin-top: -16px; 
     margin-bottom: var(--spacing-32); 
 }
+
+.el-c-hero__centered {
+    align-items: center;
+}
